--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -27,6 +27,12 @@
     </div>
     <div class="container">
       <div class="content">
+        <h1>Music</h1>
+        <div class="music-list">
+          <% @song.each do |song| %>
+            <%= song.code.html_safe %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
