--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -120,8 +120,8 @@ a, a:visited, a:hover, a:active {
 
 .tour-dates {
   position: relative;
-  height: 500px;
-  width: 40%;
+  min-height: 200px;
+  width: 50%;
   background-color: red;
   margin-left: auto;
   margin-right: auto;
@@ -136,6 +136,10 @@ a, a:visited, a:hover, a:active {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.tour-dates th {
+  text-align: left;
 }
 
 .music-list {
