--- a/app/views/tourdates/new.html.erb
+++ b/app/views/tourdates/new.html.erb
@@ -19,8 +19,16 @@
       <%= f.text_field :venue %>
     </div>
     <div class="field">
+      <%= f.label :venue_address %><br>
+      <%= f.text_field :address %>
+    </div>
+    <div class="field">
       <%= f.label :time %><br>
       <%= f.text_field :time %>
+    </div>
+    <div class="field">
+      <%= f.label :tickets_link %><br>
+      <%= f.text_field :tickets %>
     </div>
     <br>
     <div class="actions">
