mvc set up for creating a bio

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,7 @@
   <div class="right">
     <p><%= link_to 'Posts', posts_path %></p>
   </div>
+  <div>
+    <p><%= link_to 'Artist Bio', adddescription_path %></p>
+  </div>
 </div>
