creating functionality for creating a bio

--- a/app/views/descriptions/new.html.erb
+++ b/app/views/descriptions/new.html.erb
@@ -12,11 +12,11 @@
   </div>
   <div class="field">
     <%= d.label :body %><br>
-    <%= d.text_field :body %>
+    <%= d.text_area :body %>
   </div>
   <div class="text-area">
-    <%= d.label :image %><br>
-    <%= d.text_area :image %>
+    <%= d.label :text_wrap %><br>
+    <%= d.check_box :check_box %>
   </div>
   <div class="actions">
     <%= d.submit "Create Bio" %>
