--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,9 @@
     <p><%= link_to 'Posts', posts_path %></p>
   </div>
   <div>
-    <p><%= link_to 'Artist Bio', adddescription_path %></p>
+    <p><%= link_to 'Artist Bio', add_description_path %></p>
+  </div>
+  <div>
+    <p><%= link_to 'Edit Bio', edit_description_path %></p>
   </div>
 </div>
