--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -27,8 +27,10 @@
     </div>
     <div class="container">
       <div class="content">
+        <% if @descriptions %>
           <h1><%= @descriptions.header %></h1>
           <p><%= @descriptions.body %></p>
+        <% end %>
       </div>
     </div>
   </div>
