--- a/app/views/descriptions/edit.html.erb
+++ b/app/views/descriptions/edit.html.erb
@@ -3,7 +3,7 @@
 
   <div class="page-contents">
     <div class="back-button">
-      <%= link_to 'Back to Posts', posts_path %>
+      <%= link_to 'Go Back', descriptions_path %>
     </div>
     <%= form_for(@description, :url => {:action => :update, :controller => :descriptions} ) do |d| %>
   <div class="field">
