--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,6 +99,7 @@ a, a:visited, a:hover, a:active {
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
+  overflow: hidden;
 }
 
 .news-content {
@@ -188,6 +189,18 @@ a, a:visited, a:hover, a:active {
 
 #instafeed img:hover {
   opacity: 1;
+}
+
+.about {
+  margin-left: 12px;
+  margin-right: 15px;
+}
+
+.about-image {
+  float: right;
+  max-width: 50%;
+  margin-left: 15px;
+  margin-bottom: 30px;
 }
 
 
