--- a/app/views/descriptions/new.html.erb
+++ b/app/views/descriptions/new.html.erb
@@ -14,6 +14,10 @@
     <%= d.label :body %><br>
     <%= d.text_area :body %>
   </div>
+  <div class="field">
+    <%= d.label :photo %><br>
+    <%= d.file_field :avatar %>
+  </div>
   <div class="text-area">
     <%= d.label :text_wrap %><br>
     <%= d.check_box :check_box %>
