--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -30,7 +30,13 @@
         <% if @descriptions %>
           <h1><%= @descriptions.header %></h1>
             <%= image_tag @descriptions.avatar, class: "about-image" %>
-          <p class="about"><%= @descriptions.body %></p>
+          <% if @descriptions.check_box == 0 %>
+            <div class="about-left">
+              <p class="about"><%= @descriptions.body %></p>
+            </div>
+          <% else %>
+            <p class="about"><%= @descriptions.body %></p>
+          <% end %>
         <% end %>
       </div>
     </div>
