--- a/app/views/tourdates/index.html.erb
+++ b/app/views/tourdates/index.html.erb
@@ -24,7 +24,7 @@
       </thead>
       <%@tourdate.each do |tourdate| %>
          <tr>
-         <td><%= tourdate.date %></td>
+         <td><%= Date.parse(tourdate.date).strftime('%m/%d/%Y') %></td>
          <td><%= tourdate.city %></td>
          <td><%= tourdate.venue %></td>
          <td><%= tourdate.time %></td>
