--- a/app/views/tourdates/show.html.erb
+++ b/app/views/tourdates/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Log Out", logout_path %>
-<h1> <%= @tourdate.venue %>, <%= @tourdate.date %> </h1>
+<h1> <%= @tourdate.venue %>, <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> </h1>
 <div class="page-contents">
-  <p>This show is on <%= @tourdate.date %> in <%= @tourdate.city %> at <%= @tourdate.venue %> and starts at <%= @tourdate.time %>. </p>
+  <p>This show is on <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> in <%= @tourdate.city %> at <%= @tourdate.venue %> and starts at <%= @tourdate.time %>. </p>
 
   <p><%= link_to "Back to Shows", tourdates_path %></p>
 </div>
