--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,34 @@
-<%= link_to "Log Out", logout_path %>
-<h1>What Do You Want To Update?</h1>
+<div class="top-bar">
+  <p><%= link_to "Log Out", logout_path %></p>
+</div>
+<div class="admin-container">
+  <h1>What Do You Want To Update?</h1>
 
-<div class="options">
-  <div class="left">
-    <p><%= link_to 'Shows', tourdates_path %></p>
-  </div>
-  <div class="right">
-    <p><%= link_to 'Posts', posts_path %></p>
-  </div>
-  <div>
-    <p><%= link_to 'Artist Bio', descriptions_path %></p>
+  <div class="options">
+    <%= link_to descriptions_path do %>
+      <div class="option">
+        <p>Artist Bio</p>
+      </div>
+    <% end %>
+    <%= link_to posts_path do %>
+      <div class="option">
+        <p>News Posts</p>
+      </div>
+    <% end %>
+    <%= link_to tourdates_path do %>
+      <div class="option">
+        <p>Shows</p>
+      </div>
+    <% end %>
+    <%= link_to songs_path do %>
+      <div class="option">
+        <p>Music</p>
+      </div>
+    <% end %>
+    <%= link_to vids_path do %>
+      <div class="option">
+        <p>Videos</p>
+      </div>
+    <% end %>
   </div>
 </div>
