--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,25 +1,55 @@
-<%= link_to "Log Out", logout_path %>
-<h1>Create a New Post</h1>
-
+<div class="top-bar">
+  <p><%= link_to "Log Out", logout_path %></p>
+</div>
+<div class="admin-container">
+  <h1>Create a New Post</h1>
+  <div class="side-menu">
+    <%= link_to descriptions_path do %>
+      <div class="option">
+        <p>Artist Bio</p>
+      </div>
+    <% end %>
+    <%= link_to posts_path do %>
+      <div class="option">
+        <p>News Posts</p>
+      </div>
+    <% end %>
+    <%= link_to tourdates_path do %>
+      <div class="option">
+        <p>Shows</p>
+      </div>
+    <% end %>
+    <%= link_to songs_path do %>
+      <div class="option">
+        <p>Music</p>
+      </div>
+    <% end %>
+    <%= link_to vids_path do %>
+      <div class="option">
+        <p>Videos</p>
+      </div>
+    <% end %>
+  </div>
   <div class="page-contents">
     <div class="back-button">
       <%= link_to 'Back to Posts', posts_path %>
     </div>
     <%= form_for(@post, :url => {:action => :create, :controller => :posts} ) do |p| %>
-  <div class="field">
-    <%= p.label :date %><br>
-    <%= p.text_field :date, placeholder: 'MM/DD/YY' %>
+      <div class="field">
+        <%= p.label :date %><br>
+        <%= p.text_field :date, placeholder: 'MM/DD/YY' %>
+      </div>
+      <div class="field">
+        <%= p.label :title %><br>
+        <%= p.text_field :title %>
+      </div>
+      <div class="text-area">
+        <%= p.label :content %><br>
+        <%= p.text_area :body, :size =>'90%x20%' %>
+      </div>
+      <div class="actions">
+        <%= p.submit "Submit Post" %>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= p.label :title %><br>
-    <%= p.text_field :title %>
-  </div>
-  <div class="text-area">
-    <%= p.label :content %><br>
-    <%= p.text_area :body, :size =>'90%x20%' %>
-  </div>
-  <div class="actions">
-    <%= p.submit "Submit Post" %>
-  </div>
-<% end %>
-  </div>
+</div>
