--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,39 @@
-<%= link_to "Log Out", logout_path %>
-<h1> <%= @post.title %> </h1>
-<div class="page-contents">
-  <p><%= @post.date %></p>
-  <p><%= @post.body %></p>
+<div class="top-bar">
+  <p><%= link_to "Log Out", logout_path %></p>
+</div>
+<div class="admin-container">
+  <h1> <%= @post.title %> </h1>
+  <div class="side-menu">
+    <%= link_to descriptions_path do %>
+      <div class="option">
+        <p>Artist Bio</p>
+      </div>
+    <% end %>
+    <%= link_to posts_path do %>
+      <div class="option">
+        <p>News Posts</p>
+      </div>
+    <% end %>
+    <%= link_to tourdates_path do %>
+      <div class="option">
+        <p>Shows</p>
+      </div>
+    <% end %>
+    <%= link_to songs_path do %>
+      <div class="option">
+        <p>Music</p>
+      </div>
+    <% end %>
+    <%= link_to vids_path do %>
+      <div class="option">
+        <p>Videos</p>
+      </div>
+    <% end %>
+  </div>
+  <div class="page-contents">
+    <p><%= @post.date %></p>
+    <p><%= @post.body %></p>
 
-  <p><%= link_to "Back to Posts", posts_path %></p>
+    <p><%= link_to "Back to Posts", posts_path %></p>
+  </div>
 </div>
