--- a/app/views/tourdates/show.html.erb
+++ b/app/views/tourdates/show.html.erb
@@ -1,7 +1,39 @@
-<%= link_to "Log Out", logout_path %>
-<h1> <%= @tourdate.venue %>, <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> </h1>
-<div class="page-contents">
-  <p>This show is on <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> in <%= @tourdate.city %> at <%= @tourdate.venue %> and starts at <%= @tourdate.time %>. </p>
+<div class="top-bar">
+  <p><%= link_to "Log Out", logout_path %></p>
+</div>
 
-  <p><%= link_to "Back to Shows", tourdates_path %></p>
+<div class="admin-container">
+  <h1> <%= @tourdate.venue %>, <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> </h1>
+  <div class="side-menu">
+    <%= link_to descriptions_path do %>
+      <div class="option">
+        <p>Artist Bio</p>
+      </div>
+    <% end %>
+    <%= link_to posts_path do %>
+      <div class="option">
+        <p>News Posts</p>
+      </div>
+    <% end %>
+    <%= link_to tourdates_path do %>
+      <div class="option">
+        <p>Shows</p>
+      </div>
+    <% end %>
+    <%= link_to songs_path do %>
+      <div class="option">
+        <p>Music</p>
+      </div>
+    <% end %>
+    <%= link_to vids_path do %>
+      <div class="option">
+        <p>Videos</p>
+      </div>
+    <% end %>
+  </div>
+  <div class="page-contents">
+    <p>This show is on <%= Date.parse(@tourdate.date).strftime('%m/%d/%Y') %> in <%= @tourdate.city %> at <%= @tourdate.venue %> and starts at <%= @tourdate.time %>. </p>
+
+    <p><%= link_to "Back to Shows", tourdates_path %></p>
+  </div>
 </div>
