--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,9 @@
   <p><%= link_to "Log Out", logout_path %></p>
 </div>
 <div class="admin-container">
-  <h1>What Do You Want To Update?</h1>
-
+  <div class="admin-header">
+    <h1>What Do You Want To Update?</h1>
+  </div>
   <div class="options">
     <%= link_to descriptions_path do %>
       <div class="option">
