--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %></p>
+  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
 </div>
 <div class="admin-container">
   <h1> <%= @post.title %> </h1>
