--- a/app/views/descriptions/edit.html.erb
+++ b/app/views/descriptions/edit.html.erb
@@ -1,59 +1,63 @@
-<div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
-</div>
-<div class="admin-container">
-  <h1>Update Your Bio</h1>
-  <div class="side-menu">
-    <%= link_to descriptions_path do %>
-      <div class="option">
-        <p>Artist Bio</p>
-      </div>
-    <% end %>
-    <%= link_to posts_path do %>
-      <div class="option">
-        <p>News Posts</p>
-      </div>
-    <% end %>
-    <%= link_to tourdates_path do %>
-      <div class="option">
-        <p>Shows</p>
-      </div>
-    <% end %>
-    <%= link_to songs_path do %>
-      <div class="option">
-        <p>Music</p>
-      </div>
-    <% end %>
-    <%= link_to vids_path do %>
-      <div class="option">
-        <p>Videos</p>
-      </div>
-    <% end %>
+<div class="admin-background">
+  <div class="top-bar">
+    <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
   </div>
-    <div class="page-contents">
-      <div class="back-button">
-        <%= link_to 'Go Back', descriptions_path %>
+  <div class="admin-container">
+    <div class="admin-header">
+      <h1>Update Your Bio</h1>
+    </div>
+    <div class="side-menu">
+      <%= link_to descriptions_path do %>
+        <div class="option">
+          <p>Artist Bio</p>
+        </div>
+      <% end %>
+      <%= link_to posts_path do %>
+        <div class="option">
+          <p>News Posts</p>
+        </div>
+      <% end %>
+      <%= link_to tourdates_path do %>
+        <div class="option">
+          <p>Shows</p>
+        </div>
+      <% end %>
+      <%= link_to songs_path do %>
+        <div class="option">
+          <p>Music</p>
+        </div>
+      <% end %>
+      <%= link_to vids_path do %>
+        <div class="option">
+          <p>Videos</p>
+        </div>
+      <% end %>
+    </div>
+      <div class="page-contents">
+        <div class="back-button">
+          <%= link_to 'Go Back', descriptions_path %>
+        </div>
+        <%= form_for(@description, :url => {:action => :update, :controller => :descriptions} ) do |d| %>
+      <div class="field">
+        <%= d.label :header %><br>
+        <%= d.text_field :header %>
       </div>
-      <%= form_for(@description, :url => {:action => :update, :controller => :descriptions} ) do |d| %>
-    <div class="field">
-      <%= d.label :header %><br>
-      <%= d.text_field :header %>
+      <div class="field">
+        <%= d.label :body %><br>
+        <%= d.text_area :body, class: "bio-text" %>
+      </div>
+      <div class="field">
+        <%= d.label :photo %><br>
+        <%= d.file_field :avatar %>
+      </div>
+      <div class="text-area">
+        <%= d.label :text_wrap %><br>
+        <%= d.check_box :check_box %>
+      </div>
+      <div class="actions">
+        <%= d.submit "Update Bio" %>
+      </div>
+    <% end %>
     </div>
-    <div class="field">
-      <%= d.label :body %><br>
-      <%= d.text_area :body %>
-    </div>
-    <div class="field">
-      <%= d.label :photo %><br>
-      <%= d.file_field :avatar %>
-    </div>
-    <div class="text-area">
-      <%= d.label :text_wrap %><br>
-      <%= d.check_box :check_box %>
-    </div>
-    <div class="actions">
-      <%= d.submit "Update Bio" %>
-    </div>
-  <% end %>
   </div>
 </div>
