--- a/app/views/descriptions/index.html.erb
+++ b/app/views/descriptions/index.html.erb
@@ -1,44 +1,48 @@
-<div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
-</div>
-<div class="admin-container">
-  <h1>Update Your 'About' Page</h1>
-  <div class="side-menu">
-    <%= link_to descriptions_path do %>
-      <div class="option">
-        <p>Artist Bio</p>
-      </div>
-    <% end %>
-    <%= link_to posts_path do %>
-      <div class="option">
-        <p>News Posts</p>
-      </div>
-    <% end %>
-    <%= link_to tourdates_path do %>
-      <div class="option">
-        <p>Shows</p>
-      </div>
-    <% end %>
-    <%= link_to songs_path do %>
-      <div class="option">
-        <p>Music</p>
-      </div>
-    <% end %>
-    <%= link_to vids_path do %>
-      <div class="option">
-        <p>Videos</p>
-      </div>
-    <% end %>
+<div class="admin-background">
+  <div class="top-bar">
+    <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
   </div>
-  <div id="create-bio">
-    <div class="bio-button" id="bio-top">
-      <%= link_to "Create New Bio", add_description_path %>
+  <div class="admin-container">
+    <div class="admin-header">
+      <h1>Update Your Bio</h1>
     </div>
-    <hr>
-      <% if @description %>
-        <div class="bio-button" id="bio-bottom">
-          <%= link_to 'Edit Current Bio', edit_description_path(@description) %>
+    <div class="side-menu">
+      <%= link_to descriptions_path do %>
+        <div class="option">
+          <p>Artist Bio</p>
         </div>
       <% end %>
+      <%= link_to posts_path do %>
+        <div class="option">
+          <p>News Posts</p>
+        </div>
+      <% end %>
+      <%= link_to tourdates_path do %>
+        <div class="option">
+          <p>Shows</p>
+        </div>
+      <% end %>
+      <%= link_to songs_path do %>
+        <div class="option">
+          <p>Music</p>
+        </div>
+      <% end %>
+      <%= link_to vids_path do %>
+        <div class="option">
+          <p>Videos</p>
+        </div>
+      <% end %>
+    </div>
+    <div id="create-bio">
+      <div class="bio-button" id="bio-top">
+        <%= link_to "Create New Bio", add_description_path %>
+      </div>
+      <hr>
+        <% if @description %>
+          <div class="bio-button" id="bio-bottom">
+            <%= link_to 'Edit Current Bio', edit_description_path(@description) %>
+          </div>
+        <% end %>
+    </div>
   </div>
 </div>
