--- a/app/views/tourdates/edit.html.erb
+++ b/app/views/tourdates/edit.html.erb
@@ -1,68 +1,72 @@
-<div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
-</div>
-<div class="admin-container">
-  <h1>Editing Show</h1>
-  <div class="side-menu">
-    <%= link_to descriptions_path do %>
-      <div class="option">
-        <p>Artist Bio</p>
-      </div>
-    <% end %>
-    <%= link_to posts_path do %>
-      <div class="option">
-        <p>News Posts</p>
-      </div>
-    <% end %>
-    <%= link_to tourdates_path do %>
-      <div class="option">
-        <p>Shows</p>
-      </div>
-    <% end %>
-    <%= link_to songs_path do %>
-      <div class="option">
-        <p>Music</p>
-      </div>
-    <% end %>
-    <%= link_to vids_path do %>
-      <div class="option">
-        <p>Videos</p>
-      </div>
-    <% end %>
+<div class="admin-background">
+  <div class="top-bar">
+    <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
   </div>
-  <div class="page-contents">
-    <div class="back-button">
-      <%= link_to 'Back to Shows', tourdates_path %>
+  <div class="admin-container">
+    <div class="admin-header">
+      <h1>Editing Show</h1>
     </div>
-      <%= form_for(@tourdate, :url => {:action => :update, :controller => :tourdates}) do |f| %>
-      <div class="field">
-        <%= f.label :date %><br>
-        <%= f.date_field :date, placeholder: 'DD/MM/YY' %>
+    <div class="side-menu">
+      <%= link_to descriptions_path do %>
+        <div class="option">
+          <p>Artist Bio</p>
+        </div>
+      <% end %>
+      <%= link_to posts_path do %>
+        <div class="option">
+          <p>News Posts</p>
+        </div>
+      <% end %>
+      <%= link_to tourdates_path do %>
+        <div class="option">
+          <p>Shows</p>
+        </div>
+      <% end %>
+      <%= link_to songs_path do %>
+        <div class="option">
+          <p>Music</p>
+        </div>
+      <% end %>
+      <%= link_to vids_path do %>
+        <div class="option">
+          <p>Videos</p>
+        </div>
+      <% end %>
+    </div>
+    <div class="page-contents">
+      <div class="back-button">
+        <%= link_to 'Back to Shows', tourdates_path %>
       </div>
-      <div class="field">
-        <%= f.label :city %><br>
-        <%= f.text_field :city %>
-      </div>
-      <div class="field">
-        <%= f.label :venue %><br>
-        <%= f.text_field :venue %>
-      </div>
-      <div class="field">
-        <%= f.label :venue_address %><br>
-        <%= f.text_field :address %>
-      </div>
-      <div class="field">
-        <%= f.label :time %><br>
-        <%= f.text_field :time %>
-      </div>
-      <div class="field">
-        <%= f.label :tickets_link %><br>
-        <%= f.text_field :tickets %>
-      </div>
-      <br>
-      <div class="actions">
-        <%= f.submit "Update Show" %>
-      </div>
-    <% end %>
+        <%= form_for(@tourdate, :url => {:action => :update, :controller => :tourdates}) do |f| %>
+        <div class="field">
+          <%= f.label :date %><br>
+          <%= f.date_field :date, placeholder: 'DD/MM/YY' %>
+        </div>
+        <div class="field">
+          <%= f.label :city %><br>
+          <%= f.text_field :city %>
+        </div>
+        <div class="field">
+          <%= f.label :venue %><br>
+          <%= f.text_field :venue %>
+        </div>
+        <div class="field">
+          <%= f.label :venue_address %><br>
+          <%= f.text_field :address %>
+        </div>
+        <div class="field">
+          <%= f.label :time %><br>
+          <%= f.text_field :time %>
+        </div>
+        <div class="field">
+          <%= f.label :tickets_link %><br>
+          <%= f.text_field :tickets %>
+        </div>
+        <br>
+        <div class="actions">
+          <%= f.submit "Update Show" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
