--- a/app/views/tourdates/index.html.erb
+++ b/app/views/tourdates/index.html.erb
@@ -1,61 +1,64 @@
-<div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
-</div>
-<div class="admin-container">
-  <h1>Edit Your Shows</h1>
-  <div class="side-menu">
-    <%= link_to descriptions_path do %>
-      <div class="option">
-        <p>Artist Bio</p>
-      </div>
-    <% end %>
-    <%= link_to posts_path do %>
-      <div class="option">
-        <p>News Posts</p>
-      </div>
-    <% end %>
-    <%= link_to tourdates_path do %>
-      <div class="option">
-        <p>Shows</p>
-      </div>
-    <% end %>
-    <%= link_to songs_path do %>
-      <div class="option">
-        <p>Music</p>
-      </div>
-    <% end %>
-    <%= link_to vids_path do %>
-      <div class="option">
-        <p>Videos</p>
-      </div>
-    <% end %>
+<div class="admin-background">
+  <div class="top-bar">
+    <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
   </div>
-  <div class="page-contents">
-      <div class="new-entry">
-      <%= link_to "Create New Show", new_path %>
+  <div class="admin-container">
+    <div class="admin-header">
+      <h1>Manage Your Shows</h1>
     </div>
-    <div class="date-list">
-      <table>
-      <thead>
-        <tr>
-         <th>Date</th>
-         <th>City</th>
-         <th>Venue</th>
-         <th>Time</th>
-        </tr>
-      </thead>
-      <%@tourdate.each do |tourdate| %>
-         <tr>
-         <td><%= Date.parse(tourdate.date).strftime('%m/%d/%Y') %></td>
-         <td><%= tourdate.city %></td>
-         <td><%= tourdate.venue %></td>
-         <td><%= tourdate.time %></td>
-         <td><%= link_to 'Show', tourdate_path(tourdate) %></td>
-         <td><%= link_to 'Edit', edit_tourdate_path(tourdate) %></td>
-         <td><%= link_to 'Delete', delete_tourdate_path(tourdate), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-         </tr>
+    <div class="side-menu">
+      <%= link_to descriptions_path do %>
+        <div class="option">
+          <p>Artist Bio</p>
+        </div>
       <% end %>
-      </table>
+      <%= link_to posts_path do %>
+        <div class="option">
+          <p>News Posts</p>
+        </div>
+      <% end %>
+      <%= link_to tourdates_path do %>
+        <div class="option">
+          <p>Shows</p>
+        </div>
+      <% end %>
+      <%= link_to songs_path do %>
+        <div class="option">
+          <p>Music</p>
+        </div>
+      <% end %>
+      <%= link_to vids_path do %>
+        <div class="option">
+          <p>Videos</p>
+        </div>
+      <% end %>
+    </div>
+    <div class="page-contents">
+        <div class="new-entry">
+        <%= link_to "Create New Show", new_path %>
+      </div>
+      <div class="date-list">
+        <table>
+        <thead>
+          <tr>
+           <th>Date</th>
+           <th>City</th>
+           <th>Venue</th>
+           <th>Time</th>
+          </tr>
+        </thead>
+        <%@tourdate.each do |tourdate| %>
+           <tr>
+           <td><%= Date.parse(tourdate.date).strftime('%m/%d/%Y') %></td>
+           <td><%= tourdate.city %></td>
+           <td><%= tourdate.venue %></td>
+           <td><%= tourdate.time %></td>
+           <td><%= link_to 'Edit', edit_tourdate_path(tourdate) %></td>
+           <td><%= link_to 'Delete', delete_tourdate_path(tourdate), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+           </tr>
+        <% end %>
+        </table>
+      </div>
     </div>
   </div>
 </div>
