--- a/app/views/vids/edit.html.erb
+++ b/app/views/vids/edit.html.erb
@@ -1,52 +1,56 @@
-<div class="top-bar">
-  <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
-</div>
-<div class="admin-container">
-  <h1>Edit Video</h1>
-  <div class="side-menu">
-    <%= link_to descriptions_path do %>
-      <div class="option">
-        <p>Artist Bio</p>
-      </div>
-    <% end %>
-    <%= link_to posts_path do %>
-      <div class="option">
-        <p>News Posts</p>
-      </div>
-    <% end %>
-    <%= link_to tourdates_path do %>
-      <div class="option">
-        <p>Shows</p>
-      </div>
-    <% end %>
-    <%= link_to songs_path do %>
-      <div class="option">
-        <p>Music</p>
-      </div>
-    <% end %>
-    <%= link_to vids_path do %>
-      <div class="option">
-        <p>Videos</p>
-      </div>
-    <% end %>
+<div class="admin-background">
+  <div class="top-bar">
+    <p><%= link_to "Log Out", logout_path %> | <%= link_to "Home", home_path %></p>
   </div>
-  <div class="page-contents">
-    <div class="back-button">
-      <%= link_to 'Back to Videos', vids_path %>
+  <div class="admin-container">
+    <div class="admin-header">
+      <h1>Edit Video</h1>
     </div>
-      <%= form_for(@vid, :url => {:action => :update, :controller => :vids}) do |v| %>
-      <div class="field">
-        <%= v.label :title %><br>
-        <%= v.text_field :title, placeholder: 'Title' %>
+    <div class="side-menu">
+      <%= link_to descriptions_path do %>
+        <div class="option">
+          <p>Artist Bio</p>
+        </div>
+      <% end %>
+      <%= link_to posts_path do %>
+        <div class="option">
+          <p>News Posts</p>
+        </div>
+      <% end %>
+      <%= link_to tourdates_path do %>
+        <div class="option">
+          <p>Shows</p>
+        </div>
+      <% end %>
+      <%= link_to songs_path do %>
+        <div class="option">
+          <p>Music</p>
+        </div>
+      <% end %>
+      <%= link_to vids_path do %>
+        <div class="option">
+          <p>Videos</p>
+        </div>
+      <% end %>
+    </div>
+    <div class="page-contents">
+      <div class="back-button">
+        <%= link_to 'Back to Videos', vids_path %>
       </div>
-      <div class="field">
-        <%= v.label :link %><br>
-        <%= v.text_area :link %>
-      </div>
-      <br>
-      <div class="actions">
-        <%= v.submit "Update Video" %>
-      </div>
-    <% end %>
+        <%= form_for(@vid, :url => {:action => :update, :controller => :vids}) do |v| %>
+        <div class="field">
+          <%= v.label :title %><br>
+          <%= v.text_field :title, placeholder: 'Title' %>
+        </div>
+        <div class="field">
+          <%= v.label :link %><br>
+          <%= v.text_area :link, class: "vid-link" %>
+        </div>
+        <br>
+        <div class="actions">
+          <%= v.submit "Update Video" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
