--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,7 +35,7 @@
     </div>
     <div class="page-contents">
       <div class="new-entry">
-        <%= link_to 'Create New Post', addpost_path %>
+        <%= link_to 'Add New Post', addpost_path %>
       </div>
       <div class="post-list">
         <table>
