--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -51,7 +51,7 @@
           <%= p.text_area :body, :size =>'90%x20%' %>
         </div>
         <div class="actions">
-          <%= p.submit "Submit Post" %>
+          <%= p.submit "Submit Post", class: "submit-button" %>
         </div>
       <% end %>
     </div>
