--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -48,7 +48,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= s.submit "Add Track" %>
+          <%= s.submit "Add Track", class: "submit-button" %>
         </div>
       <% end %>
     </div>
