--- a/app/views/tourdates/edit.html.erb
+++ b/app/views/tourdates/edit.html.erb
@@ -64,7 +64,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= f.submit "Update Show" %>
+          <%= f.submit "Update Show", class: "submit-button" %>
         </div>
       <% end %>
     </div>
