--- a/app/views/tourdates/index.html.erb
+++ b/app/views/tourdates/index.html.erb
@@ -35,7 +35,7 @@
     </div>
     <div class="page-contents">
         <div class="new-entry">
-        <%= link_to "Create New Show", new_path %>
+        <%= link_to "Post a New Show", new_path %>
       </div>
       <div class="date-list">
         <table>
