--- a/app/views/vids/edit.html.erb
+++ b/app/views/vids/edit.html.erb
@@ -48,7 +48,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= v.submit "Update Video" %>
+          <%= v.submit "Update Video", class: "submit-button" %>
         </div>
       <% end %>
     </div>
