--- a/app/views/vids/new.html.erb
+++ b/app/views/vids/new.html.erb
@@ -48,7 +48,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= v.submit "Add Video" %>
+          <%= v.submit "Add Video", class: "submit-button" %>
         </div>
       <% end %>
     </div>
