--- a/app/views/descriptions/new.html.erb
+++ b/app/views/descriptions/new.html.erb
@@ -57,7 +57,7 @@
       </div>
       <br>
       <div class="actions">
-        <%= d.submit "Create Bio" %>
+        <%= d.submit "Create Bio", class: "submit-button" %>
       </div>
     <% end %>
     </div>
