--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -48,7 +48,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= s.submit "Update Track" %>
+          <%= s.submit "Update Track", class: "submit-button" %>
         </div>
       <% end %>
     </div>
