--- a/app/views/tourdates/new.html.erb
+++ b/app/views/tourdates/new.html.erb
@@ -64,7 +64,7 @@
         </div>
         <br>
         <div class="actions">
-          <%= f.submit "Create New Show" %>
+          <%= f.submit "Create New Show", class: "submit-button" %>
         </div>
       <% end %>
     </div>
