header styling changes

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -12,6 +12,11 @@
         <% end %>
       <div class="nav-social">
         <div class="social-icons">
+          <ul>
+            <li><a href=""><%= image_tag "facebook-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "twitter-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "instagram-icon.png" %><a/></li>
+          </ul>
         </div>
         <div class="navigation">
           <ul>
@@ -26,8 +31,6 @@
       </div>
     </div>
     <div class="container">
-      <div class="content">
-      </div>
     </div>
   </div>
 </body>
