--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,11 @@
 
 .wrapper {
   position: absolute;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   background-color: orange;
+  background-image: url(phoenix-large.jpg);
+  background-attachment: fixed;
   margin-left: -8px;
   margin-top: -8px;
 }
@@ -25,7 +27,7 @@
   position: relative;
   height: 120px;
   width: 100%;
-  background-color: black;
+  background-color: #d8344f;
 }
 
 .logo {
@@ -33,6 +35,7 @@
   height: 100px;
   width: 440px;
   background-color: green;
+  background-image: url(phoenix-logo.jpg);
   margin-top: 10px;
   margin-left: 10px;
 }
@@ -41,7 +44,7 @@
   position: relative;
   height: 100px;
   width: 40%;
-  background-color: purple;
+  background-color: #d8344f;
   float: right;
   margin-top: 10px;
   margin-right: 10px;
@@ -49,17 +52,32 @@
 
 .social-icons {
   position: relative;
-  height: 30px;
+  height: 40px;
   width: 160px;
-  background-color: yellow;
-    float: right;
+/*  background-color: yellow;*/
+  float: right;
+}
+
+.social-icons ul {
+  list-style-type: none;
+  float: right;
+  margin-top: 0px;
+}
+
+.social-icons ul li {
+  display: inline;
+}
+
+.social-icons ul li img {
+  width: 36px;
+  height: 36px;
 }
 
 .navigation {
   position: relative;
   height: 40px;
   width: 100%;
-  background-color: pink;
+  background-color: #d8344f;
   margin-top: 60px;
 }
 
@@ -84,12 +102,12 @@ a, a:visited, a:hover, a:active {
   color: inherit;
 }
 
-.container {
+/*.container {
   position: absolute;
   min-height: 100%;
   width: 100%;
   background-color: blue;
-}
+}*/
 
 .content {
   position: relative;
@@ -212,7 +230,6 @@ a, a:visited, a:hover, a:active {
 /* THE FOLLOWING IS FOR THE ADMIN
 PAGES OF THE WEBSITE */
 .admin-background {
-/*  background-color: orange;*/
   background-image: url(red-rocks-panorama.jpg);
   background-size: cover;
   background-position: -300px;
@@ -252,6 +269,7 @@ PAGES OF THE WEBSITE */
   min-height: 45px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -20px;
   margin-bottom: 20px;
   border-radius: 5px;
 }
@@ -538,13 +556,14 @@ textarea {
     .logo {
         width: 385px;
         height: 88px;
+        background-size: 100%;
     }
 }
 
 /* FOR IPADS */
 @media (max-width: 768px) {
     .header {
-        background-color: white;
+        background-color: #d8344f;
     }
 
     .logo {
@@ -570,19 +589,18 @@ textarea {
 }
 
 /* FOR SMALL TABLETS */
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .header {
-        background-color: orangered;
+        background-color: #d8344f;
         height: 450px;
         margin-top: -60px;
     }
 
     .logo {
-        position: absolute;
         margin-top: 70px;
-        margin-left: 20%;
+        margin-left: 10%;
         margin-right: 20%;
-        width: 60%;
+        width: 440px;
         height: 100px;
     }
 
@@ -625,10 +643,17 @@ textarea {
 
 }
 
+@media (max-width: 530px) {
+    .logo {
+      width: 385px;
+      height: 88px;
+    }
+}
+
 /*--- FOR IPHONE AND OTHER SMART PHONES --- */
 @media (max-width: 480px) {
     .header {
-      background-color: salmon;
+      background-color: #d8344f;
       height: 420px;
       margin-top: -60px;
     }
@@ -636,9 +661,10 @@ textarea {
     .logo {
       position: absolute;
       margin-top: 70px;
-        margin-left: 10%;
-        margin-right: 10%;
-      width: 320px;
+      margin-left: 10%;
+      margin-right: 10%;
+      height: 75px;
+      width: 330px;
     }
 
     .nav-social {
