--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -12,6 +12,11 @@
         <% end %>
       <div class="nav-social">
         <div class="social-icons">
+          <ul>
+            <li><a href=""><%= image_tag "facebook-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "twitter-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "instagram-icon.png" %><a/></li>
+          </ul>
         </div>
         <div class="navigation">
           <ul>
