--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -12,6 +12,11 @@
         <% end %>
       <div class="nav-social">
         <div class="social-icons">
+          <ul>
+            <li><a href=""><%= image_tag "facebook-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "twitter-icon.png" %></a></li>
+            <li><a href=""><%= image_tag "instagram-icon.png" %><a/></li>
+          </ul>
         </div>
         <div class="navigation">
           <ul>
@@ -31,7 +36,7 @@
         <div class="post-list">
           <% @post.each do |post| %>
             <div class="news-post">
-              <%= post.date %>
+              <%= Date.parse(post.date).strftime('%m/%d/%Y') %>
               <%= post.title %>
               <br>
               <%= post.body %>
